# 4Pics1WordCheater

./: .four-pics-one-word.cabal.swp  .gitignore  Guardfile  README.md  four-pics-one-word.cabal
src/: .FourPicsOneWord.hs.swp  FourPicsOneWord.hs  Main.hs
test/: FourPicsOneWordSpec.hs
