Name:                   four-pics-one-word
Version:                0.0.1
Author:                 Zane-XY-W <_@_.org >
Maintainer:             Zane-XY-W <_@_.org >
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.18
Build-Type:             Simple

Executable 4pics1word
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall -O2
  Exposed-Modules:      FourPicsOneWord
  Main-Is:              Main.hs
  Build-Depends:        base >= 4 && < 5,
                        xml-conduit >= 1.1.0.9,
                        html-conduit >= 1.1.0.2,
                        http-conduit >= 2.0.0.8,
                        text >= 1.1.0.1,
                        bytestring >= 0.10.0.2,
                        cmdargs >= 0.10.7

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec

Source-Repository head
  Type:                 git
--  Location:             
